<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/admin_add_product_background_style">

    <EditText
        android:id="@+id/txtNewProductTitle"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_background_style"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:hint="@string/txtAddProductTitle"
        android:inputType="textCapWords"
        android:paddingEnd="5dp"
        android:paddingStart="15dp"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="normal" />

    <EditText
        android:id="@+id/txtNewProductPrice"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/text_background_style"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:hint="@string/txtAddProductPrice"
        android:inputType="number"
        android:paddingEnd="5dp"
        android:paddingStart="15dp"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="normal" />

    <Spinner
        android:id="@+id/spinnerAddProductCategory"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/text_background_style"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:hint="@string/txtAddProductCategory"
        android:inputType="none"
        android:paddingEnd="5dp"
        android:paddingStart="15dp"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="normal"
        android:entries="@array/product_category_names"/>

    <EditText
        android:id="@+id/txtNewProductDescription"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/text_background_style"
        android:fontFamily="sans-serif"
        android:gravity="start"
        android:hint="@string/txtAddProductDescription"
        android:inputType="textMultiLine"
        android:maxLength="200"
        android:paddingEnd="5dp"
        android:paddingStart="15dp"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        android:typeface="normal" />

    <ImageView
        android:id="@+id/imgProductImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignStart="@id/txtNewProductDescription"
        android:layout_marginTop="290dp"
        android:background="@drawable/admin_add_product_image_view_style"
        android:contentDescription="@string/imgAddProductImage"
        />
    <Button
        android:id="@+id/btnAdminAddProductImage"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:drawableStart="@drawable/ic_action_search"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:drawableTint="@color/white"
        android:layout_alignEnd="@id/txtNewProductDescription"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="330dp"
        android:background="@drawable/admin_add_product_choose_img_button_style"
        android:fontFamily="sans-serif"
        android:text="@string/txtAddProductImage"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:textColor="@color/white" />
    <Button
        android:id="@+id/btnAdminAddProduct"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignStart="@id/spinnerAddProductCategory"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/admin_add_product_add_button_style"
        android:fontFamily="sans-serif"
        android:text="@string/txtAddProductAddButton"
        android:textSize="17sp"
        android:textAllCaps="true"
        android:textColor="@color/black" />
    <Button
        android:id="@+id/btnAdminCancel"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@id/spinnerAddProductCategory"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/admin_add_product_cancel_button_style"
        android:fontFamily="sans-serif"
        android:text="@string/txtAddProductCancelButton"
        android:textSize="17sp"
        android:textAllCaps="true"
        android:textColor="@color/white" />
</RelativeLayout>