<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/login_dialog_background_style">
    <AutoCompleteTextView
        android:id="@+id/txtLoginEmail"
        android:drawableStart="@drawable/ic_action_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:hint="@string/txtEmail_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:typeface="normal"
        android:textSize="20sp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:background="@drawable/text_background_style"/>
    <EditText
        android:id="@+id/txtLoginPassword"
        android:drawableStart="@drawable/ic_action_password"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/text_background_style"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:hint="@string/txtPassword_hint"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:singleLine="false"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="normal" />
    <Button
        android:id="@+id/btnLoginMain"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/login_button_main_style"
        android:text="@string/btnLogin"
        android:textColor="#000000"
        android:textAllCaps="true"
        />
</RelativeLayout>